--- a/templates/disease.html
+++ b/templates/disease.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <title>Farm Vision - Disease Detection</title>
+  <title>FarmVision - Disease Detection</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/disease.css') }}">`
   <link rel="icon" type="image/png" href="/static/images/web-icon2.png">
@@ -16,8 +16,8 @@
   <header>
       <nav>
         <a href="{{ url_for('home.home_page') }}" class="logo">
-          <p class="logo-text">Farm Vision</p>
-          <span class="tagline">Bringing AI to Agriculture</span>
+          <p class="logo-text">FarmVision</p>
+          <span class="tagline">Empowering farmers with AI</span>
         </a>
         <ul class="nav-links">
           <li><a href="{{ url_for('home.home_page') }}" >Home</a></li>
@@ -43,7 +43,7 @@
   <footer>
     <div class="footer-content">
       <div class="footer-logo">
-        <h2>Farm Vision</h2>
+        <h2>FarmVision</h2>
       </div>
       <p>Made with ❤️ for farmers and agriculture enthusiasts.</p>
       <p>Empowering better crop decisions, detecting diseases early, and improving yields.</p>
