--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <title>Farm Vision - Home</title>
+  <title>FarmVision - Home</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">`
   <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
@@ -16,8 +16,8 @@
   <header>
     <nav>
       <a href="{{ url_for('home.home_page') }}" class="logo">
-        <p class="logo-text">Farm Vision</p>
-        <span class="tagline">Bringing AI to Agriculture</span>
+        <p class="logo-text">FarmVision</p>
+        <span class="tagline">Empowering farmers with AI</span>
       </a>
       <ul class="nav-links">
         <li><a href="{{ url_for('home.home_page') }}" class="active">Home</a></li>
@@ -30,7 +30,7 @@
   <!--Hero Section-->
   <div class="hero-sec">
     <div class="hero-content">
-      <h1>Welcome to Farm Vision</h1>
+      <h1>Welcome to FarmVision</h1>
       <p class="sub-text">Empowering farmers with smart solutions! Get AI-driven crop recommendations and crop disease detection to enhance your yield and protect your crops. Make informed decisions for a sustainable and profitable future in agriculture.</p>
     </div>
     <div class="questions">
@@ -87,11 +87,11 @@
   <footer>
     <div class="footer-content">
       <div class="footer-logo">
-        <h2>Farm Vision</h2>
+        <h2>FarmVision</h2>
       </div>
       <p>Made with ❤️ for farmers and agriculture enthusiasts.</p>
       <p>Empowering better crop decisions, detecting diseases early, and improving yields.</p>
-      <p>&copy; 2025 Farm Vision. All Rights Reserved.</p>
+      <p>&copy; 2025 FarmVision. All Rights Reserved.</p>
     </div>
   </footer>
 </body>
